--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #############################
 # Personal git ignored files#
 ahk/streamdeck_profile/vars/homelab.ahk
-proxmox/cloud-init/ubuntu-images/
+proxmox/cloud-init/ubuntu-images/*
 #############################
 
 # Byte-compiled / optimized / DLL files
